--- a/index.html
+++ b/index.html
@@ -28,33 +28,34 @@
 
 
   <script type="text/javascript">
-    $(window).scroll(function(){
+    $(window).scroll(function() {
       $('nav').toggleClass('scrolled', $(this).scrollTop() > 50);
     });
   </script>
 </head>
 
 <!-- <body background="img/bg.png"> -->
+
 <body>
-<nav class="nav-bar-nav">
-  <div class="nav-left-home">
-    <ul class="nav-bar-list">
-    <li class="nav-bar-link" id="nav-bar-link-name"><a href="index.html">Michelle Yang</a></li>
-  </ul>
-  </div>
-  <div class="nav-right-home">
-    <ul class="nav-bar-list">
+  <nav class="nav-bar-nav">
+    <div class="nav-left-home">
+      <ul class="nav-bar-list">
+        <li class="nav-bar-link" id="nav-bar-link-name"><a href="index.html">Michelle Yang</a></li>
+      </ul>
+    </div>
+    <div class="nav-right-home">
+      <ul class="nav-bar-list">
         <li class="nav-bar-link"><a href="#about">About</a></li>
-      <li class="nav-bar-link"><a href="#blog">My blog</a></li>
+        <li class="nav-bar-link"><a href="#blog">My blog</a></li>
 
-      <li class="nav-bar-link"><a href="#contact">Contact</a></li>
-
-
+        <li class="nav-bar-link"><a href="#contact">Contact</a></li>
 
 
-    </ul>
-  </div>
-</nav>
+
+
+      </ul>
+    </div>
+  </nav>
   <div class="container-fluid main-body">
 
     <div class="intro-wrapper">
@@ -63,14 +64,15 @@
       <div class="description-main" id="about">
 
 
-<img class="profile-image" src="img/profile.png" alt="">
+        <img class="profile-image" src="img/profile.png" alt="">
 
 
-      <h1 class="index-heading">Hi, I’m Michelle 👋</h1>
+        <h1 class="index-heading">Hi, I’m Michelle 👋</h1>
 
-      <p class="index-description"><br>👩‍💻: I’m a program manager intern at Amazon Web Services. <br><br>🎓: I am studying Computer Science at McGill University in Montreal, Canada. <br><br> ✍️: I write about Tech, Career Growth and Life. <br><br> 📚: I'm currently working towards my AWS Associate Solution Architect certification.<br><br>
+        <p class="index-description"><br>👩‍💻: I’m a program manager intern at Amazon Web Services. <br><br>🎓: I am studying Computer Science at McGill University in Montreal, Canada. <br><br> ✍️: I write about Tech, Career Growth and Life.
+          <br><br> 📚: I'm currently working towards my AWS Associate Solution Architect certification.<br><br>
 
-</p>
+        </p>
 
         <div class="links-wrapper">
           <a href="mailto:michelle.yang.mcgill@gmail.com"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
@@ -83,116 +85,125 @@
     </div>
 
 
-      <!-- END OF DESCRIPTION  -->
+    <!-- END OF DESCRIPTION  -->
 
-      <div class="project-section-wrapper" id="blog" >
+    <div class="project-section-wrapper" id="blog">
 
-        <h1 class="section-heading" id="work-tab-scroll">My blog</h1>
-
-
-
-
-
-            <!--  HYPERCARE-->
-               <div onclick="window.open('https://www.linkedin.com/posts/michelle-yang2_quarantine-internship-thankyou-activity-6804068270795317248-XAOk',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
-                 <div class="col-md-6 project-image-container">
-                   <img class="img-responsive project-image" src="img/blog-cover/2-hypercare.png" alt="">
-                 </div>
-
-                 <div class="col-md-6">
-                   <div class="project-information">
-                     <h3 class="design-date">2021 • Hypercare • Internship</h3>
-                     <h1 class="design-title">What I Learned as a CSM Intern at Hypercare</h1>
-                     <h1 class="design-description">The most valuable lession I learned working at a tech healthcare start-up in Toronto </h1>
-                     <div class="tag_case_study">work culture</div><div class="tag_case_study">empathy at workspace</div><div class="tag_case_study">campassion</div>
-                     <button type="button" class="design-read-study-btn">Read More →</button>
-                   </div>
-                 </div>
-               </div>
-
-
-
-
-                     <!--  MVP-->
-                        <div onclick="window.open('https://michelle-yang.medium.com/still-procrastinating-on-your-project-you-need-an-mvp-minimum-viable-product-283bd591b25b',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
-                          <div class="col-md-6 project-image-container">
-                            <img class="img-responsive project-image" src="img/blog-cover/5-MVP.png" alt="">
-                          </div>
-
-                          <div class="col-md-6">
-                            <div class="project-information">
-                              <h3 class="design-date">2021 • Start-Up • MVP</h3>
-                              <h1 class="design-title">Applying the idea of MVP to cure procrastination</h1>
-                              <h1 class="design-description">The secret to actually get things done</h1>
-                              <div class="tag_case_study">productivity</div><div class="tag_case_study">procrastination</div><div class="tag_case_study">product management</div>
-                              <button type="button" class="design-read-study-btn">Read More →</button>
-                            </div>
-                          </div>
-                        </div>
-
-
-                        <!--  AWS-->
-                           <div onclick="window.open('https://michelle-yang.medium.com/about',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
-                             <div class="col-md-6 project-image-container">
-                               <img class="img-responsive project-image" src="img/blog-cover/1-onboarding-aws.png" alt="">
-                             </div>
-
-                             <div class="col-md-6">
-                               <div class="project-information">
-                                 <h3 class="design-date">2021 • Amazon Web Services • Internship</h3>
-                                 <h1 class="design-title">1 Way and 2 way Doors: Decision Making at Amazon </h1>
-                                 <h1 class="design-description">Please subscribe to my medium to get notified when the blog is published</h1>
-                                 <div class="tag_case_study">decision making</div><div class="tag_case_study">strategic thinking</div><div class="tag_case_study">business insights</div>
-                                 <a href="shopify.html"><button type="button" class="design-read-study-btn">Coming Soon →</button></a>
-                               </div>
-                             </div>
-                           </div>
+      <h1 class="section-heading" id="work-tab-scroll">My blog</h1>
 
 
 
 
 
-                                       <!--  Extracurricular • Events -->
-                                          <div onclick="window.open('https://michelle-yang.medium.com/about',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
-                                            <div class="col-md-6 project-image-container">
-                                              <img class="img-responsive project-image" src="img/blog-cover/3-interview-tips-aws.png" alt="">
-                                            </div>
+      <!--  HYPERCARE-->
+      <div onclick="window.open('https://www.linkedin.com/posts/michelle-yang2_quarantine-internship-thankyou-activity-6804068270795317248-XAOk',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
+        <div class="col-md-6 project-image-container">
+          <img class="img-responsive project-image" src="img/blog-cover/2-hypercare.png" alt="">
+        </div>
 
-
-                                            <div class="col-md-6">
-                                              <div class="project-information">
-                                                <h3 class="design-date">2021 • Extracurricular • Events</h3>
-                                                <h1 class="design-title">Post-pandemic Event: How to Engage Your Audience</h1>
-                                                <h1 class="design-description">Please subscribe to my medium to get notified when the blog is published </h1>
-                                                <div class="tag_case_study">event planning</div><div class="tag_case_study">marketing science</div><div class="tag_case_study">target audience</div>
-
-                                                <button type="button" class="design-read-study-btn">Coming Soon →</button>
-                                              </div>
-                                            </div>
-                                          </div>
-
-
-
-
-
-
-
-
-
-
-
+        <div class="col-md-6">
+          <div class="project-information">
+            <h3 class="design-date">2021 • Hypercare • Internship</h3>
+            <h1 class="design-title">What I Learned as a CSM Intern at Hypercare</h1>
+            <h1 class="design-description">The most valuable lession I learned working at a tech healthcare start-up in Toronto </h1>
+            <div class="tag_case_study">work culture</div>
+            <div class="tag_case_study">empathy at workspace</div>
+            <div class="tag_case_study">campassion</div>
+            <button type="button" class="design-read-study-btn">Read More →</button>
+          </div>
         </div>
       </div>
-      <div class="contact-footer"id="contact">
-        <h1 class="footer-header" >Let's Connect</h1>
-        <h3 class="footer-description">I’d love to chat about anything - so let’s get some ☕</h3>
-        <p class="footer-links">
-          <a href="mailto:michelle.yang.mcgill@gmail.com">Email</a>  &nbsp; • &nbsp;
-          <a href="https://www.linkedin.com/in/michelle-yang2/" target="_blank">LinkedIn</a> &nbsp; •&nbsp;
-          <a href="https://michelle-yang.medium.com/" target="_blank">Medium</a>
-        </p>
+
+
+
+
+      <!--  MVP-->
+      <div onclick="window.open('https://michelle-yang.medium.com/still-procrastinating-on-your-project-you-need-an-mvp-minimum-viable-product-283bd591b25b',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
+        <div class="col-md-6 project-image-container">
+          <img class="img-responsive project-image" src="img/blog-cover/5-MVP.png" alt="">
+        </div>
+
+        <div class="col-md-6">
+          <div class="project-information">
+            <h3 class="design-date">2021 • Start-Up • MVP</h3>
+            <h1 class="design-title">Applying the idea of MVP to cure procrastination</h1>
+            <h1 class="design-description">The secret to actually get things done</h1>
+            <div class="tag_case_study">productivity</div>
+            <div class="tag_case_study">procrastination</div>
+            <div class="tag_case_study">product management</div>
+            <button type="button" class="design-read-study-btn">Read More →</button>
+          </div>
+        </div>
       </div>
+
+
+      <!--  AWS-->
+      <div onclick="window.open('https://michelle-yang.medium.com/about',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
+        <div class="col-md-6 project-image-container">
+          <img class="img-responsive project-image" src="img/blog-cover/1-onboarding-aws.png" alt="">
+        </div>
+
+        <div class="col-md-6">
+          <div class="project-information">
+            <h3 class="design-date">2021 • Amazon Web Services • Internship</h3>
+            <h1 class="design-title">1 Way and 2 way Doors: Decision Making at Amazon </h1>
+            <h1 class="design-description">Please subscribe to my medium to get notified when the blog is published</h1>
+            <div class="tag_case_study">decision making</div>
+            <div class="tag_case_study">strategic thinking</div>
+            <div class="tag_case_study">business insights</div>
+
+            <button type="button" class="design-read-study-btn">Coming Soon →</button>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+      <!--  Extracurricular • Events -->
+      <div onclick="window.open('https://michelle-yang.medium.com/about',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
+        <div class="col-md-6 project-image-container">
+          <img class="img-responsive project-image" src="img/blog-cover/3-interview-tips-aws.png" alt="">
+        </div>
+
+
+        <div class="col-md-6">
+          <div class="project-information">
+            <h3 class="design-date">2021 • Extracurricular • Events</h3>
+            <h1 class="design-title">Post-pandemic Event: How to Engage Your Audience</h1>
+            <h1 class="design-description">Please subscribe to my medium to get notified when the blog is published </h1>
+            <div class="tag_case_study">event planning</div>
+            <div class="tag_case_study">marketing science</div>
+            <div class="tag_case_study">target audience</div>
+
+            <button type="button" class="design-read-study-btn">Coming Soon →</button>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+    </div>
+  </div>
+  <div class="contact-footer" id="contact">
+    <h1 class="footer-header">Let's Connect</h1>
+    <h3 class="footer-description">I’d love to chat about anything - so let’s get some ☕</h3>
+    <p class="footer-links">
+      <a href="mailto:michelle.yang.mcgill@gmail.com">Email</a> &nbsp; • &nbsp;
+      <a href="https://www.linkedin.com/in/michelle-yang2/" target="_blank">LinkedIn</a> &nbsp; •&nbsp;
+      <a href="https://michelle-yang.medium.com/" target="_blank">Medium</a>
+    </p>
+  </div>
 
   </div>
 </body>
+
 </html>
