updated linkedin link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="links-wrapper">
           <a href="mailto:michelle.yang.mcgill@gmail.com"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
-          <a href="https://www.linkedin.com/in/michelle-yang2/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/michelleyang2/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
 
           <a href="https://michelle-yang.medium.com/" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
 
@@ -150,7 +150,7 @@
             <h1 class="design-description">Please subscribe to my medium to get notified when the blog is published</h1>
             <div class="tag_case_study">decision making</div>
             <div class="tag_case_study">strategic thinking</div>
-            <div class="tag_case_study">business insights</div>
+          
 
             <button type="button" class="design-read-study-btn">Coming Soon →</button>
           </div>
@@ -198,7 +198,7 @@
     <h3 class="footer-description">I’d love to chat about anything - so let’s get some ☕</h3>
     <p class="footer-links">
       <a href="mailto:michelle.yang.mcgill@gmail.com">Email</a> &nbsp; • &nbsp;
-      <a href="https://www.linkedin.com/in/michelle-yang2/" target="_blank">LinkedIn</a> &nbsp; •&nbsp;
+      <a href="https://www.linkedin.com/in/michelleyang2/" target="_blank">LinkedIn</a> &nbsp; •&nbsp;
       <a href="https://michelle-yang.medium.com/" target="_blank">Medium</a>
     </p>
   </div>
