--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1 class="index-heading">Hi, I’m Michelle 👋</h1>
 
         <p class="index-description"><br>👩‍💻: I’m a program manager intern at Amazon Web Services. <br><br>🎓: I am studying Computer Science at McGill University in Montreal, Canada. <br><br> ✍️: I write about Tech, Career Growth and Life.
-          <br><br> 📚: I'm currently working towards my AWS Associate Solution Architect certification.<br><br>
+          <br><br> 📚: I am currently working towards my AWS Certified Developer – Associate certification.<br><br>
 
         </p>
 
