--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
         <h1 class="index-heading">Hi, I’m Michelle 👋</h1>
 
-        <p class="index-description"><br>👩‍💻: I’m a program manager intern at Amazon Web Services. <br><br>🎓: I am studying Computer Science at McGill University in Montreal, Canada. <br><br> ✍️: I write about Tech, Career Growth and Life.
-          <br><br> 📚: I am currently working towards my AWS Certified Developer – Associate certification.<br><br>
+        <p class="index-description"><br>👩‍💻: I’m a solution architect at Amazon Web Services. <br><br>🎓: I graduated from McGill University with a major in Computer Science in Montreal. <br><br> ✍️: I write about Tech, Career Growth and Life.
+          <br><br> 📚: I'm currently working towards my AWS Certified Developer – Associate certification..<br><br>
 
         </p>
 
