--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
         <h1 class="index-heading">Hi, I’m Michelle 👋</h1>
 
-        <p class="index-description"><br>👩‍💻: I’m a solution architect at Amazon Web Services. <br><br>🎓: I graduated from McGill University with a major in Computer Science in Montreal. <br><br> ✍️: I write about Tech, Career Growth and Life.
-          <br><br> 📚: I'm currently working towards my AWS Certified Developer – Associate certification..<br><br>
+        <p class="index-description"><br>👩‍💻: I’m a solution architect at Amazon Web Services. <br><br>🎓: I graduated from McGill University with a major in Computer Science in Montreal. <br><br> 💃🏻: I am also a dancer, artist and the founder of CaptivateMTL, a dance community that celebrate art and movment.
+          <br><br> 📚: I'm currently reading "The Lean Product Playbook" by Dan Olsen.<br><br>
 
         </p>
 
@@ -95,24 +95,7 @@
 
 
 
-      <!--  HYPERCARE-->
-      <div onclick="window.open('https://www.linkedin.com/posts/michelleyang2_quarantine-internship-thankyou-activity-6804068270795317248-yAd3',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
-        <div class="col-md-6 project-image-container">
-          <img class="img-responsive project-image" src="img/blog-cover/2-hypercare.png" alt="">
-        </div>
 
-        <div class="col-md-6">
-          <div class="project-information">
-            <h3 class="design-date">2021 • Hypercare • Internship</h3>
-            <h1 class="design-title">What I Learned as a CSM Intern at Hypercare</h1>
-            <h1 class="design-description">The most valuable lession I learned working at a tech healthcare start-up in Toronto </h1>
-            <div class="tag_case_study">work culture</div>
-            <div class="tag_case_study">empathy at workspace</div>
-            <div class="tag_case_study">campassion</div>
-            <button type="button" class="design-read-study-btn">Read More →</button>
-          </div>
-        </div>
-      </div>
 
 
 
@@ -125,12 +108,31 @@
 
         <div class="col-md-6">
           <div class="project-information">
-            <h3 class="design-date">2021 • Start-Up • MVP</h3>
+            <h3 class="design-date">• Start-Up • MVP</h3>
             <h1 class="design-title">Applying the idea of MVP to cure procrastination</h1>
             <h1 class="design-description">The secret to actually get things done</h1>
             <div class="tag_case_study">productivity</div>
             <div class="tag_case_study">procrastination</div>
             <div class="tag_case_study">product management</div>
+            <button type="button" class="design-read-study-btn">Read More →</button>
+          </div>
+        </div>
+      </div>
+
+            <!--  HYPERCARE-->
+      <div onclick="window.open('https://www.linkedin.com/posts/michelleyang2_quarantine-internship-thankyou-activity-6804068270795317248-yAd3',target='_blank');" class="row design-row" id="l-case-study" target="_blank">
+        <div class="col-md-6 project-image-container">
+          <img class="img-responsive project-image" src="img/blog-cover/2-hypercare.png" alt="">
+        </div>
+
+        <div class="col-md-6">
+          <div class="project-information">
+            <h3 class="design-date"> • Healthcare • Startup</h3>
+            <h1 class="design-title">Lead with Empathy</h1>
+            <h1 class="design-description">The most valuable lession I learned working at a tech healthcare start-up in Toronto </h1>
+            <div class="tag_case_study">work culture</div>
+            <div class="tag_case_study">empathy at workspace</div>
+            <div class="tag_case_study">campassion</div>
             <button type="button" class="design-read-study-btn">Read More →</button>
           </div>
         </div>
@@ -145,7 +147,7 @@
 
         <div class="col-md-6">
           <div class="project-information">
-            <h3 class="design-date">2021 • Amazon Web Services • Internship</h3>
+            <h3 class="design-date">• Amazon Web Services • Internship</h3>
             <h1 class="design-title">1 Way and 2 way Doors: Decision Making at Amazon </h1>
             <h1 class="design-description">Please subscribe to my medium to get notified when the blog is published</h1>
             <div class="tag_case_study">decision making</div>
@@ -170,7 +172,7 @@
 
         <div class="col-md-6">
           <div class="project-information">
-            <h3 class="design-date">2021 • Extracurricular • Events</h3>
+            <h3 class="design-date"> • Virtual Event • Event Marketing</h3>
             <h1 class="design-title">Post-pandemic Event: How to Engage Your Audience</h1>
             <h1 class="design-description">Please subscribe to my medium to get notified when the blog is published </h1>
             <div class="tag_case_study">event planning</div>
